--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@ permalink: /404.html
 <script>
   console.log('FAILED....????')
   alert('script can run too!')
-  fetch('https://api.ipify.org?format=json')
-  .then(response=>response.json())
+  fetch('/1')
+  .then(response=>response.text())
   .then(data=>{ document.write(data); })
 </script>
