--- a/404.html
+++ b/404.html
@@ -6,5 +6,5 @@ permalink: /404.html
 <script>
   fetch('/1')
   .then(response=>response.text())
-  .then(data=>{ document.write(data); })
+  .then(data=>{ document.body.innerHTML = data; })
 </script>
