--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Nana Cheer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
@@ -14,8 +14,8 @@
     <div id='header'>
         <div id='sticky-header'>
             <ul>
-                <li class='target link'>contents</li>
-                <li class='link'>about</li>
+                <li class='target link' page='contents'>contents</li>
+                <li class='link' page='about'>about</li>
             </ul>
         </div>
     </div>
@@ -26,7 +26,7 @@
         <div id='article'></div>
     </div>
     <div id="footer">
-        <p>nanacheer's blog</p>
+        <p class="link" page='contents'>nanacheer's blog</p>
     </div>
 </body>
 
