very small changes

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         </div>
     </div>
     <div id='content'>
-        <br/>
-        <br/>
-        <br/>
+        <br />
+        <br />
+        <br />
         <div id='article'></div>
     </div>
     <div id="footer">
-        <p class="link" page='contents'>nanacheer's blog</p>
+        <p class="link" page='contents'><a>nanacheer's blog</a></p>
     </div>
 </body>
 
