--- a/contents.html
+++ b/contents.html
@@ -1,4 +1,8 @@
 <p><a class='link content' page='prologue' style='color: gray; font-size: 0.7em'>PROLOGUE</a></p>
 <p>开始了。行吧。</p>
-<p><a class='link content' page='224' style='color: pink'>第一周 2019.2.24</a></p>
-
+<p>
+    <a class='link content' page='spotify' style="font-family: 'Montserrat', sans-serif; font-size: 2em; color: palegreen">Spotify</a>
+</p>
+<p>
+    <a class='link content' page='224' style='color: pink'>第一周 2019.2.24</a>
+</p>
