--- a/224.html
+++ b/224.html
@@ -1,3 +1,16 @@
 <p>
-<span class='day-remain'></span> until Feb<sup>24</sup>.
+在时刻可能会被瞥见的屏幕上写日记有点羞耻，于是在24号的昨天没有更新。今晚在手机上写完的。
 </p>
+
+<p>
+变得好一点了，我自己。对未知没那么害怕，虽然可能仅仅是因为我囫囵吞了太多枣，但我确实感觉面对眼前的东西时更放松了。而且，我觉得重要的是，我可以去有自己的想法，可以去远离人云亦云。这也不是我想说的，我只想记点流水帐。
+</p>
+
+<p>
+今天很认真地读数学了，我觉得比较认真了。我以前总觉得自己得快点看书，再快点看书，书一页页翻过去，文字通过视神经进入我的认知系统，就像看了一眼擦肩而过的好看的女子，我除了当时那一瞬间的实在感，就再也没有什么结果和展开了。我是愿意也能够一个字一个字地看书的，只有如此我才能获得学习的快乐与紧张感。我希望感受这些。
+</p>
+
+<p>
+另外，我觉得我应该喜欢喝咖啡，生活太容易疲劳和变得无趣，一杯咖啡可以给我一点积极的感觉和快乐的幻觉。最后一点我就不说了。就这样。
+</p>
+
