--- a/contents.html
+++ b/contents.html
@@ -1,9 +1,12 @@
 <p><a class='link content' page='prologue' style='color: gray; font-size: 0.7em'>PROLOGUE</a></p>
-
+<br/>
 <p>
     <a class='link content' page='spotify' style="font-family: 'Montserrat', sans-serif; font-size: 1.4em; color: palegreen">Spotify</a>
 </p>
 <p>
     <a class='link content' page='0224' style='color: pink'>2.24</a>
-    <a class='link content' page='0303' style='color: pink'>3.3</a>
 </p>
+<p style="text-align: right">
+    <a class='link content' page='sns' style="font-family: 'Times New Roman', sans-serif; font-size: 2em; color: white">SNS</a>
+</p>
+
