--- a/contents.html
+++ b/contents.html
@@ -1,3 +1,7 @@
+<p>
+    一开始的想法是从简单的做起，所以现在准备整理一下，换个样子。
+</p>
+
 <p><a class='link content' page='prologue' style='color: gray; font-size: 0.7em'>PROLOGUE</a></p>
 
 <br/>
@@ -18,3 +22,7 @@
     <a class='link content' page='TheEndOfTheWorld' style="font-size: 1.5em; color: pink">The End Of The World</a>
 </p>
 
+<p>
+    <a class='link content' page='keepmemo' style="color: white">Keepメモ</a>
+</p>
+    
