--- a/contents.html
+++ b/contents.html
@@ -26,3 +26,7 @@
     <a class='link content' page='keepmemo' style="color: white">Keepメモ</a>
 </p>
     
+<p>
+    <a class='link content' page='demo' style="color: white">DEMO</a>
+</p>
+    
