--- a/contents.html
+++ b/contents.html
@@ -1,32 +1,30 @@
 <p>
-    一开始的想法是从简单的做起，所以现在准备整理一下，换个样子。
+    <a class="link content" page='final' style="color:aqua; font-size:4.7em">FINAL</a>
 </p>
 
-<p><a class='link content' page='prologue' style='color: gray; font-size: 0.7em'>PROLOGUE</a></p>
-
-<br/>
+<p><a class='link content' page='prologue' style='color: white; font-size: 0.7em'>PROLOGUE</a></p>
 
 <p>
-    <a class='link content' page='spotify' style="font-family: 'Montserrat', sans-serif; font-size: 1.4em; color: palegreen">Spotify</a>
+    <a class='link content' page='spotify' style="font-family: 'Montserrat', sans-serif; color: pink">Spotify</a>
 </p>
 
 <p>
     <a class='link content' page='0224' style='color: pink'>2.24</a>
 </p>
 
-<p style="text-align: right">
-    <a class='link content' page='sns' style="font-family: 'Times New Roman', sans-serif; font-size: 2em; color: white">SNS</a>
+<p>
+    <a class='link content' page='sns' style="font-family: 'Times New Roman', sans-serif; font-size: 2em; color: pink">SNS</a>
 </p>
 
 <p>
-    <a class='link content' page='TheEndOfTheWorld' style="font-size: 1.5em; color: pink">The End Of The World</a>
+    <a class='link content' page='TheEndOfTheWorld' style="font-size: 1.1em; color: pink">The End Of The World</a>
 </p>
 
 <p>
-    <a class='link content' page='keepmemo' style="color: white">Keepメモ</a>
+    <a class='link content' page='keepmemo' style="color: pink">Keepメモ</a>
 </p>
     
 <p>
-    <a class='link content' page='demo' style="color: white">DEMO</a>
+    <a class='link content' page='demo' style="color: pink">DEMO</a>
 </p>
     
