--- a/demo.html
+++ b/demo.html
@@ -1,8 +1,1 @@
-<figure>
-    <figcaption>Demo 1</figcaption>
-    <audio
-        controls
-        src="demo.19.4.6.wav">
-            Your browser does not support the<code>audio</code> element.
-    </audio>
-</figure>
+Lost In Current Version.
