--- a/keepmemo.html
+++ b/keepmemo.html
@@ -27,7 +27,7 @@
 
 <h4>to 3.25</h4>
 
-<blockquote class="twitter-tweet"><p lang="zh" dir="ltr">讲到“黑暗时代”，教授打趣说几百年后的人也可能会觉得对古典大师知之甚少的我们就是黑暗时代，并举例说2011年去世的作家旅行家战争英雄Patrick Leigh Fermor可能是最后一个古典“大儒”，那时Fermor和希腊游击队绑架了德国军官，在躲藏的途中他们引用罗马诗人聊天。教授说：“那样的世界结束了”。 <a href="https://t.co/9fYhZGdhF4">pic.twitter.com/9fYhZGdhF4</a></p>&mdash; aTraveller (@moviejunkie) <a href="https://twitter.com/moviejunkie/status/1107571037288300544?ref_src=twsrc%5Etfw">March 18, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<blockquote>讲到“黑暗时代”，教授打趣说几百年后的人也可能会觉得对古典大师知之甚少的我们就是黑暗时代，并举例说2011年去世的作家旅行家战争英雄Patrick Leigh Fermor可能是最后一个古典“大儒”，那时Fermor和希腊游击队绑架了德国军官，在躲藏的途中他们引用罗马诗人聊天。教授说：“那样的世界结束了”。&mdash; aTraveller (@moviejunkie) </blockquote>
 
 
 <p>
@@ -35,9 +35,9 @@
 </p>
 
 
+<blockquote>我在景点的纪念品店买了一个小东西，觉得包装袋非常的好看，就去和前台讲能不能多给我一个，本来担心会被拒绝，因为我真的只买了很小的一个东西。结果员工特别爽快，甚至很开心“of course！I am so glad you like it！have a nice day！” &mdash; 大杯四季春茶三分甜 (@permanent_vivid) </blockquote>
 
-<blockquote class="twitter-tweet"><p lang="zh" dir="ltr">我在景点的纪念品店买了一个小东西，觉得包装袋非常的好看，就去和前台讲能不能多给我一个，本来担心会被拒绝，因为我真的只买了很小的一个东西。结果员工特别爽快，甚至很开心“of course！I am so glad you like it！have a nice day！”</p>&mdash; 大杯四季春茶三分甜 (@permanent_vivid) <a href="https://twitter.com/permanent_vivid/status/1108780373306167296?ref_src=twsrc%5Etfw">March 21, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
+<p>
 我看到这样的东西就会感觉又幸福又想哭。我多么希望所有人都友好，善良，自由，可是我看到的，是一群无聊，盲目，木讷的人。所谓的科技，工业侵入生活如此之深，生活还剩下多少？我又情绪化了。
 </p>
 
